--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,54 @@
         --secondary-bg-cl: #2F303A;
         --accent-bg-cl: #2196F3;
         --secondary-accent-bg-cl: #F5F4FA;
+    /* others */
+        --portfolio-items: 3;
+        --portfolio-indent: 30px;
+        --team-items: 4;
+        --team-indent: 30px;
+}
+
+/* reset */
+h1,
+h2,
+h3,
+h4,
+p {
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 /* body */
 body {
     font-family: var(--main-font), sans-serif;
     color: var(--main-txt-cl);
+    margin: 0;
+}
+
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 /* lists */
 .list {
     list-style-type: none;
     text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
 
 /* links */
@@ -51,7 +87,26 @@ body {
     background-color: var(--main-bg-cl)
 }
 
-.header-nav {}
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: 1px solid #ECECEC;
+}
+
+.header-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header-logo {
+    margin-top: 24px;
+    margin-right: 93px;
+    margin-bottom: 24px;
+
+}
 
 .logo {
     font-family: var(--secondary-font);
@@ -68,8 +123,13 @@ body {
     text-decoration: none;
 }
 
-.header-list, .list {
+.header-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+
+.header-list, .list {}
 
 .header-list-item {}
 
@@ -82,16 +142,25 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-txt-cl);
-    }
+    padding-right: 50px;
+}
+        
+.header-link:last-child {
+    margin-right: 0;
+}
     
 .header-link:hover,
 .header-link:focus {
     color: var(--accent-txt-cl);
-    }
+}
+
+.header-contact-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 .header-contact-list, .list {}
-
-.header-contact-list-item {}
 
 .header-contact-link {
     width: 122px;
@@ -109,12 +178,24 @@ body {
     color: var(--accent-txt-cl);
 }
 
+.header-contact-list-item:not(:last-child) {
+    margin-right: 50px;
+}
+
 /* hero*/
 .hero {
     background-color: var(--secondary-bg-cl);
 }
 
+.hero-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .hero-title {
+    width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.14;
@@ -122,6 +203,7 @@ body {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--secondary-accent-txt-cl);
+    margin: 200px 452px 30px 452px;
 }
 
 .hero-btn {
@@ -137,6 +219,8 @@ body {
     left: 700px;
     top: 430px;
     border: none;
+    border-radius: 4px;
+    margin: 30px 700px 200px 700px;
 }
 
 .hero-btn:hover,
@@ -145,6 +229,12 @@ body {
 }
 
 /* benefits */
+.benefits-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
 .benefits-list-item-title {
     font-weight: 700;
     font-size: 14px;
@@ -152,6 +242,9 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-txt-cl);
+    margin-top: 65px;
+    margin-right: 30px;
+    margin-bottom: 10px;
 }
 
 .benefits-list-item-text {
@@ -160,11 +253,47 @@ body {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--secondary-txt-cl);
+    margin-right: 30px;
+    margin-bottom: 94px;
+}
+
+/* practice */
+.practice-title {
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 50px;
+}
+
+.practice-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 94px;
 }
 
 /* team */
+.team-container {
+    padding-top: 94px;
+}
 .team {
     background-color: var(--secondary-accent-bg-cl);
+}
+
+.team-title {
+    margin-top: 94px;
+    margin-bottom: 50px;
+}
+
+.team-set {
+    display: flex;
+    flex-wrap: wrap;
+    margin: calc(-1 * var(--team-indent) / 2);
+}
+
+.team-set-item {
+    flex-basis: calc((100% - var(var(--team-indent)) * var(--team-items)) / var(--team-items));
+    margin: calc(var(--team-indent) / 2);
 }
 
 .team-list-item-title {
@@ -183,6 +312,7 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-txt-cl);
+    margin-bottom: 94px;
 }
 
 /* portfolio */
@@ -190,8 +320,18 @@ body {
     background-color: var(--main-bg-cl);
 }
 
-.portfolio-filter-list, .list {
-} 
+.portfolio-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.portfolio-filter-list { 
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.portfolio-filter-list, .list {} 
 
 .portfolio-filter-btn {
     font-weight: 500;
@@ -202,6 +342,10 @@ body {
     color: var(--main-txt-cl);
     background-color: var(--secondary-accent-bg-cl);
     border: none;
+    border-radius: 4px;
+    margin-right: 8px;
+    margin-bottom: 50px;
+    padding: 6px 22px;
 }
 
 .portfolio-filter-btn:hover,
@@ -209,6 +353,21 @@ body {
     color: var(--secondary-accent-txt-cl);
     background-color: var(--accent-bg-cl);
 }
+
+/* portfolio-list set */
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    margin: calc(-1 * var(--portfolio-indent) / 2);
+}
+
+.card-set-item {
+    flex-basis: calc((100% - var(var(--portfolio-indent)) * var(--portfolio-items)) / var(--portfolio-items));
+    margin: calc(var(--portfolio-indent) / 2);
+}
+
+.portfolio-list-item {}
+
 
 .portfolio-list-item-title {
     font-weight: 700;
@@ -231,12 +390,22 @@ body {
     background-color: var(--secondary-bg-cl);
 }
 
+.footer-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-logo {
+    margin-top: 60px;
+}
+
 .footer-logo-span {
     color: var(--secondary-accent-txt-cl);
 }
 
 .footer-address {
-    font-style: normal
+    font-style: normal;
+    margin-bottom: 60px;
 }
 
 .footer-address-list, .list {}
